<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="main_activity_title">Catalogue</string>
    <string name="tab_layout_movie">Movies</string>
    <string name="tab_layout_tv_show">TV Shows</string>
    <string name="movie_listing">Movie Listing</string>
    <string name="tv_show_listing">TV Show Listing</string>
    <string name="movie_title_placeholder">Movie Name</string>
    <string name="movie_year_placeholder">2019</string>
    <string name="movie_figure_placeholder">Calvin Tandra</string>
    <string name="detail_activity_title">Details</string>
    <string name="detail_category">Category</string>
    <string name="detail_category_movie">Movie</string>
    <string name="detail_category_tv_show">TV Show</string>
    <string name="detail_year">Release Year</string>
    <string name="detail_figure">Figure</string>
    <string name="detail_figure_director">Director</string>
    <string name="detail_figure_creator">Creator</string>
    <string name="sample_category">Sample Category</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_figure">Sample Figure</string>
    <string name="sample_year">Sample Year</string>
    <string name="sample_description">Sample Description</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="language_fragment_title">Languages</string>
    <string name="language_options_en">English</string>
    <string name="language_options_in">Indonesian</string>
    <string name="btn_language_choose">Choose</string>
    <string name="btn_language_close">Close</string>
    <string name="language_message_currently_used">This is the currently used language!</string>
    <string name="language_message_chosen">Successfully changed the application\'s language!</string>
    <string name="menu_language">Change Language</string>
    <string-array name="movie_title">
        <item name="A Star is Born">A Star is Born</item>
        <item name="Alita: Battle Angel">Alita: Battle Angel</item>
        <item name="Aquaman">Aquaman</item>
        <item name="Avengers: Infinity War">Avengers: Infinity War</item>
        <item name="Bohemian Rhapsody">Bohemian Rhapsody</item>
        <item name="Cold Pursuit">Cold Pursuit</item>
        <item name="Creed II">Creed II</item>
        <item name="Fantastic Beasts: The Crimes of Grindelwald">Fantastic Beasts: The Crimes of Grindelwald</item>
        <item name="Glass">Glass</item>
        <item name="How to Train Your Dragon: The Hidden World">How to Train Your Dragon: The Hidden World</item>
        <item name="Mary Queen of Scots">Mary Queen of Scots</item>
        <item name="Master Z: Ip Man Legacy">Master Z: Ip Man Legacy</item>
        <item name="Mortal Engines">Mortal Engines</item>
        <item name="Overlord">Overlord</item>
        <item name="Ralph Breaks the Internet">Ralph Breaks the Internet</item>
        <item name="Robin Hood">Robin Hood</item>
        <item name="Serenity">Serenity</item>
        <item name="Spider-Man: Into the Spider-Verse">Spider-Man: Into the Spider-Verse</item>
        <item name="T-34">T-34</item>
        <item name="Arrow">Arrow</item>
        <item name="Doom Patrol">Doom Patrol</item>
        <item name="Dragon Ball">Dragon Ball</item>
        <item name="Fairy Tail">Fairy Tail</item>
        <item name="Family Guy">Family Guy</item>
        <item name="Game of Thrones">Game of Thrones</item>
        <item name="Gotham">Gotham</item>
        <item name="Grey's Anatomy">Grey\'s Anatomy</item>
        <item name="Hanna">Hanna</item>
        <item name="Marvel's Iron Fist">Marvel\'s Iron Fist</item>
        <item name="Naruto Shippuuden">Naruto Shippuuden</item>
        <item name="NCIS">NCIS</item>
        <item name="Riverdale">Riverdale</item>
        <item name="Shameless">Shameless</item>
        <item name="Supergirl">Supergirl</item>
        <item name="Supernatural">Supernatural</item>>
        <item name="The Flash">The Flash</item>
        <item name="The Simpsons">The Simpsons</item>
        <item name="The Umbrella Academy">The Umbrella Academy</item>
        <item name="The Walking Dead">The Walking Dead</item>
    </string-array>
</resources>